[gd_scene load_steps=3 format=3 uid="uid://brghx648neoli"]

[ext_resource type="Script" path="res://addons/gd_spatial_audio/SpatialAudioPlayer3D.gd" id="1_hncxx"]
[ext_resource type="PackedScene" uid="uid://dnpql2tm08xdw" path="res://func_godot/entities/Annotation/annotation.tscn" id="2_o0nfu"]

[node name="SpatialAudioPlayer3D" type="AudioStreamPlayer3D"]
script = ExtResource("1_hncxx")

[node name="RayCastPlayer" type="RayCast3D" parent="."]
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="RayCastFoward" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 1)
collision_mask = 8

[node name="RayCastFowardLeft" type="RayCast3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)
target_position = Vector3(0, 0, 1)
collision_mask = 8

[node name="RayCastFowardRight" type="RayCast3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)
target_position = Vector3(0, 0, 1)
collision_mask = 8

[node name="RayCastBackward" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -1)
collision_mask = 8

[node name="RayCastBackwardLeft" type="RayCast3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)
target_position = Vector3(0, 0, -1)
collision_mask = 8

[node name="RayCastBackwardRight" type="RayCast3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)
target_position = Vector3(0, 0, -1)
collision_mask = 8

[node name="RayCastUp" type="RayCast3D" parent="."]
target_position = Vector3(0, 1, 0)
collision_mask = 8

[node name="RayCastLeft" type="RayCast3D" parent="."]
target_position = Vector3(1, 0, 0)
collision_mask = 8

[node name="RayCastRight" type="RayCast3D" parent="."]
target_position = Vector3(-1, 0, 0)
collision_mask = 8

[node name="Annotation" parent="." instance=ExtResource("2_o0nfu")]
